--- a/app/config/parameters.yml
+++ b/app/config/parameters.yml
@@ -1,4 +1,4 @@
-# This file is auto-generated during the composer install
+# This file is auto-generated during the composer install for test
 parameters:
     database_host: 127.0.0.1
     database_port: null
